force-app/main/default/objects/Contact/fields/Rocket_Pro_Training_Score__c.field-meta.xml
<CustomField>
    <fullName>Rocket_Pro_Training_Score__c</fullName>
    <label>Rocket Pro Training Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>