force-app/main/default/objects/Contact/fields/Rocket_Pro_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>Rocket_Pro_Training_Status__c</fullName>
    <label>Rocket Pro Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>