force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Agency Staff</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Associate Broker</fullName>
            </value>
            <value>
                <fullName>Associate Financial Consultant</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
                <isActive>false</isActive>
                <label>Board Member</label>
            </value>
            <value>
                <fullName>Branch Manager</fullName>
                <isActive>false</isActive>
                <label>Branch Manager</label>
            </value>
            <value>
                <fullName>Broker/Owner</fullName>
            </value>
            <value>
                <fullName>Client Relations</fullName>
            </value>
            <value>
                <fullName>Command Assistant</fullName>
                <isActive>false</isActive>
                <label>Command Assistant</label>
            </value>
            <value>
                <fullName>Command General</fullName>
                <isActive>false</isActive>
                <label>Command General</label>
            </value>
            <value>
                <fullName>Command Sergeant Major</fullName>
                <isActive>false</isActive>
                <label>Command Sergeant Major</label>
            </value>
            <value>
                <fullName>Contracting Command</fullName>
                <isActive>false</isActive>
                <label>Contracting Command</label>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate Additional Decision Maker</fullName>
            </value>
            <value>
                <fullName>Financial_Consultant_Partner_FCA</fullName>
                <isActive>false</isActive>
                <label>Financial_Consultant_Partner_FCA</label>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Financial Consultant</fullName>
            </value>
            <value>
                <fullName>Financial Consultant Assistant</fullName>
            </value>
            <value>
                <fullName>Financial Professional</fullName>
            </value>
            <value>
                <fullName>General Agent</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>HR Coordinator</fullName>
                <isActive>false</isActive>
                <label>HR Coordinator</label>
            </value>
            <value>
                <fullName>Industry Advocate</fullName>
            </value>
            <value>
                <fullName>In-house Counselor</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>