force-app/main/default/objects/Contact/fields/RTO__c.field-meta.xml
<CustomField>
    <fullName>RTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RTO</label>
    <type>Checkbox</type>
</CustomField>