force-app/main/default/objects/Contact/fields/RTO_Date__c.field-meta.xml
<CustomField>
    <fullName>RTO_Date__c</fullName>
    <label>RTO Date</label>
    <type>Date</type>
</CustomField>