force-app/main/default/objects/Contact/fields/SAFe_Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>SAFe_Exam_Date__c</fullName>
    <label>SAFe Exam Date</label>
    <type>Date</type>
</CustomField>