force-app/main/default/objects/Contact/fields/SAFe_Exam_Status__c.field-meta.xml
<CustomField>
    <fullName>SAFe_Exam_Status__c</fullName>
    <label>SAFe Exam Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>No Show Excused</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Waiting to be Cancelled</fullName>
            </value>
            <value>
                <fullName>Late Cancel</fullName>
            </value>
            <value>
                <fullName>Initialized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>