force-app/main/default/objects/Contact/fields/Saw_Webinar_Group_Session__c.field-meta.xml
<CustomField>
    <fullName>Saw_Webinar_Group_Session__c</fullName>
    <label>Saw Webinar/Group Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>