force-app/main/default/objects/Contact/fields/Schwab_ID__c.field-meta.xml
<CustomField>
    <fullName>Schwab_ID__c</fullName>
    <label>Schwab ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>