force-app/main/default/objects/Contact/fields/Shared_Relo_MI_Contact__c.field-meta.xml
<CustomField>
    <fullName>Shared_Relo_MI_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shared Relo/MI Contact</label>
    <type>Checkbox</type>
</CustomField>