force-app/main/default/objects/Contact/fields/SHRM__c.field-meta.xml
<CustomField>
    <fullName>SHRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SHRM</label>
    <type>Checkbox</type>
</CustomField>