force-app/main/default/objects/Contact/fields/State_Branch_Requirement__c.field-meta.xml
<CustomField>
    <fullName>State_Branch_Requirement__c</fullName>
    <formula>TEXT( Account.State_Branch_Requirement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Branch Requirement</label>
    <type>Text</type>
</CustomField>