force-app/main/default/objects/Contact/fields/State_Farm_Email__c.field-meta.xml
<CustomField>
    <fullName>State_Farm_Email__c</fullName>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>