force-app/main/default/objects/Contact/fields/State_Farm_State_Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Farm_State_Agent_Code__c</fullName>
    <label>State Farm: State &amp; Agent Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>