force-app/main/default/objects/Contact/fields/State_Specific_Documents__c.field-meta.xml
<CustomField>
    <fullName>State_Specific_Documents__c</fullName>
    <label>State Specific Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Sent to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>