force-app/main/default/objects/Contact/fields/State_Type__c.field-meta.xml
<CustomField>
    <fullName>State_Type__c</fullName>
    <formula>TEXT (Account.State_Type__c)</formula>
    <label>State Type</label>
    <type>Text</type>
</CustomField>