force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <color>#33CC00</color>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <color>#FF0000</color>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>New</fullName>
                <color>#DDDDDD</color>
                <label>New</label>
            </value>
            <value>
                <fullName>Engaged</fullName>
                <color>#A845DC</color>
                <label>Engaged</label>
            </value>
            <value>
                <fullName>Referring</fullName>
                <color>#33CC00</color>
                <label>Referring</label>
            </value>
            <value>
                <fullName>Not Interested</fullName>
                <color>#A53711</color>
                <label>Not Interested</label>
            </value>
            <value>
                <fullName>Not Referring</fullName>
                <color>#CC0000</color>
                <label>Not Referring</label>
            </value>
            <value>
                <fullName>Dormant</fullName>
                <color>#66CCCC</color>
                <label>Dormant</label>
            </value>
            <value>
                <fullName>Intro Requirements</fullName>
            </value>
            <value>
                <fullName>Signed Documentation</fullName>
            </value>
            <value>
                <fullName>Pre-Training</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Passed Exams</fullName>
            </value>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Ready to Originate</fullName>
            </value>
            <value>
                <fullName>Originating</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>