force-app/main/default/objects/Contact/fields/Take_Off_Call_List__c.field-meta.xml
<CustomField>
    <fullName>Take_Off_Call_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Take Off Call List</label>
    <type>Checkbox</type>
</CustomField>