force-app/main/default/objects/Contact/fields/Test_RTO_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_RTO_Status__c</fullName>
    <formula>IF( AND(

Agent_Logged_into_Workday__c = TRUE,
NOT(ISNULL(Workday_Common_ID__c)),
TEXT(Background_Check_Status__c)=&quot;Pass&quot;, 
OR( Historical_Products_and_Pricing_Training__c,TEXT(Products_Pricing_Exam_Status__c)=&quot;Acquired&quot;),
TEXT(Rocket_Pro_Training_Status__c)=&quot;Successful&quot;),

&quot;RTO&quot;, &quot;Not RTO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test RTO Status</label>
    <type>Text</type>
</CustomField>