force-app/main/default/objects/Contact/fields/Total_Clients__c.field-meta.xml
<CustomField>
    <fullName>Total_Clients__c</fullName>
    <label>Total Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>