force-app/main/default/objects/Contact/fields/Total_Clients_Date_Modified__c.field-meta.xml
<CustomField>
    <fullName>Total_Clients_Date_Modified__c</fullName>
    <label>Total Clients Date Modified</label>
    <type>DateTime</type>
</CustomField>