force-app/main/default/objects/Contact/fields/Training_Materials_Sent__c.field-meta.xml
<CustomField>
    <fullName>Training_Materials_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Materials Sent</label>
    <type>Checkbox</type>
</CustomField>