force-app/main/default/objects/Contact/fields/Training_Sign_Up_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Training_Sign_Up_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Sign Up Email Sent</label>
    <type>Checkbox</type>
</CustomField>