force-app/main/default/objects/Contact/fields/TSSM_Outreach__c.field-meta.xml
<CustomField>
    <fullName>TSSM_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TSSM Outreach</label>
    <type>Checkbox</type>
</CustomField>