force-app/main/default/objects/Contact/fields/W9_Signed__c.field-meta.xml
<CustomField>
    <fullName>W9_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>W-9 Signed</label>
    <type>Checkbox</type>
</CustomField>