force-app/main/default/objects/Contact/fields/Wave__c.field-meta.xml
<CustomField>
    <fullName>Wave__c</fullName>
    <formula>TEXT(Account.Wave__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wave</label>
    <type>Text</type>
</CustomField>