force-app/main/default/objects/Contact/fields/WD_Furthest_Stage_Entered__c.field-meta.xml
<CustomField>
    <fullName>WD_Furthest_Stage_Entered__c</fullName>
    <label>WD Furthest Stage Entered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Hire</fullName>
            </value>
            <value>
                <fullName>Stamp of Approval</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>