force-app/main/default/objects/Contact/fields/WD_Has_Used_Create_Account_URL__c.field-meta.xml
<CustomField>
    <fullName>WD_Has_Used_Create_Account_URL__c</fullName>
    <label>WD Has Used Create Account URL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>