force-app/main/default/objects/Contact/fields/WD_Phone__c.field-meta.xml
<CustomField>
    <fullName>WD_Phone__c</fullName>
    <formula>SUBSTITUTE(
 SUBSTITUTE(
 SUBSTITUTE(
 SUBSTITUTE( 
 SUBSTITUTE(
 SUBSTITUTE( Phone,&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot; ),&quot;.&quot;,&quot;&quot;),&quot;+1&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WD_Phone</label>
    <type>Text</type>
</CustomField>