force-app/main/default/objects/Contact/fields/WD_Signature_Status__c.field-meta.xml
<CustomField>
    <fullName>WD_Signature_Status__c</fullName>
    <label>WD Signature Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>