force-app/main/default/objects/Contact/fields/WD_W_9_Signature_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>WD_W_9_Signature_Date_and_Time__c</fullName>
    <label>WD W-9 Signature Date and Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>