force-app/main/default/objects/Contact/fields/Why_Not__c.field-meta.xml
<CustomField>
    <fullName>Why_Not__c</fullName>
    <label>Why Not?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Does_Agent_Qualify__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not enough experience</fullName>
            </value>
            <value>
                <fullName>Building Network</fullName>
            </value>
            <value>
                <fullName>Looking to hire people</fullName>
            </value>
            <value>
                <fullName>Can not meet Net-worth requirement</fullName>
                <isActive>false</isActive>
                <label>Can not meet Net-worth requirement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>