force-app/main/default/objects/Contact/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <label>Work</label>
    <type>Phone</type>
</CustomField>