force-app/main/default/objects/Contact/fields/Workday_Common_ID__c.field-meta.xml
<CustomField>
    <fullName>Workday_Common_ID__c</fullName>
    <externalId>true</externalId>
    <label>Workday Common ID</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>