force-app/main/default/objects/Contact/fields/Workday_Document__c.field-meta.xml
<CustomField>
    <fullName>Workday_Document__c</fullName>
    <label>Workday Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>