force-app/main/default/objects/Contact/fields/Workday_Email__c.field-meta.xml
<CustomField>
    <fullName>Workday_Email__c</fullName>
    <label>Workday Email</label>
    <type>Email</type>
</CustomField>